--- a/GameData/ROCapsules/PartConfigs/Dragon/DECQ/DragonChute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/DECQ/DragonChute.cfg
@@ -21,6 +21,8 @@ PART
 	node_stack_Chute = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, 2
 
 	CoMOffset = 0.0, 0.0, 1.0000005
+	CoLOffset = 0.0, 0.0, 1.0000005
+	CoPOffset = 0.0, 0.0, 1.0000005
 
 	attachRules = 1,0,1,0,0
 
@@ -45,19 +47,14 @@ PART
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.25
-	dragModelType = default
-	angularDrag = 0.1
-	crashTolerance = 10
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
+	mass = 0.5
+	crashTolerance = 12
+	emissiveConstant = 0.7
 	breakingForce = 100
 	breakingTorque = 50
 	bodyLiftMultiplier = 0
 	stagingIcon = PARACHUTES
-	fuelCrossFeed = False
-	stageOffset = 1
-	childStageOffset = 1
+	stageOffset = -1
 	buoyancyUseCubeNamed = PACKED
 
 	//  ============================================================================
@@ -104,13 +101,11 @@ PART
 	MODULE
 	{
 		name = RealChuteModule
-		caseMass = 0.25
+		caseMass = 0.5
 		timer = 0
 		mustGoDown = True
 		spareChutes = 0
-		cutSpeed = 0.5
-		invertCanopy = false
-		reverseOrientation = false
+		cutSpeed = 0.25
 
 		PARACHUTE
 		{
@@ -122,12 +117,12 @@ PART
 			minIsPressure = False
 			minPressure = 0.01
 			preDeployedDiameter = 5
-			preDeploymentSpeed = 2.5
+			preDeploymentSpeed = 0.5
 			minDeployment = 3500
 			deployedDiameter = 50
-			deploymentSpeed = 5.0
+			deploymentSpeed = 0.12
 			deploymentAlt = 1500
-			cutAlt = -1
+			cutAlt = 0
 		}
 	}
 
@@ -148,8 +143,8 @@ PART
 
 @PART[ROC-DragonChute]:AFTER[zzzRealismOverhaul]
 {
-	@maxTemp = 673.15
-	@skinMaxTemp = 773.15
+	@maxTemp = 973.15
+	@skinMaxTemp = 2673.15
 }
 
 @PART[ROC-DragonChute]:AFTER[zzzRealismOverhaul]
