--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CMLunar.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CMLunar.cfg
@@ -23,7 +23,7 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 1.87176, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0, 1.880697, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -1.600847, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_mainChutes = 0.0, 1.481525, -1.557307, 0.0, 1.0, 0.0, 2
 	node_stack_drogueCover = 0.0, 1.2, -1.0, 0.0, 1.0, 0.0, 2
@@ -62,7 +62,7 @@ PART
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 6.820
+	mass = 7.0
 	dragModelType = default
 	breakingForce = 250
 	breakingTorque = 250
@@ -75,7 +75,8 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
-	fuelCrossFeed = True
+	bodyLiftOnlyUnattachedLift = True
+	bodyLiftOnlyAttachName = bottom
 
 	//  ============================================================================
 	//  Animations and Textures
@@ -149,7 +150,13 @@ PART
 		minimumCrew = 0
 		hasHibernation = True
 		hibernationMultiplier = 0.625
-
+		defaultControlPointDisplayName = Default
+		CONTROLPOINT
+		{
+			name = reverse
+			displayName = Reversed
+			orientation = 0,0,180
+		}
 		RESOURCE
 		{
 			name = ElectricCharge
@@ -166,7 +173,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, 0.2
+		DescentModeCoM = 0, 0, -0.19
 	}
 
 	MODULE
@@ -234,50 +241,47 @@ PART
 
 	MODULE
 	{
-		name = ModuleEnginesRF
-		EngineType = LiquidFuel
-		thrustVectorTransformName = SmokeTransform
+		name = ModuleConductionMultiplier
+		modifiedConductionFactor = 0.003
+		convectionFluxThreshold = 3000
 	}
 
 	MODULE
 	{
-		name = ModuleEngineConfigs
-		type = ModuleEngines
-		configuration = Dragon SuperDraco Cluster
-		modded = false
-		CONFIG
+		name = ModuleEnginesRF
+		engineID = Superdraco
+		EngineType = LiquidFuel
+		thrustVectorTransformName = SmokeTransform
+		exhaustDamage = False
+		throttleLocked = False
+		ignitionThreshold = 0.1
+		minThrust = 136
+		maxThrust = 680
+		heatProduction = 100
+		PROPELLANT
 		{
-			name = Dragon SuperDraco Cluster
-			minThrust = 34
-			maxThrust = 170
-			heatProduction = 54
-			PROPELLANT
-			{
-				name = MMH
-				ratio = 0.5629
-				DrawGauge = True
-			}
-			PROPELLANT
-			{
-				name = NTO
-				ratio = 0.4371
-				DrawGauge = False
-			}
-			atmosphereCurve
-			{
-				key = 0 280			//	This is a complete guess.
-				key = 1 240
-			}
-
-			ullage = False
-			pressureFed = True
-			ignitions = 0			//	No reason to limit them.
-
-			IGNITOR_RESOURCE
-			{
-				name = ElectricCharge
-				amount = 0.5
-			}
+			name = MMH
+			ratio = 0.5629
+			DrawGauge = True
+		}
+		PROPELLANT
+		{
+			name = NTO
+			ratio = 0.4371
+			DrawGauge = False		
+		}
+		atmosphereCurve
+		{
+			key,0 = 0 280
+			key,1 = 1 240
+		}
+		ullage = False
+		pressureFed = True
+		ignitions = 0	
+		IGNITOR_RESOURCE
+		{
+			name = ElectricCharge
+			amount = 1.0
 		}
 	}
 
@@ -285,9 +289,11 @@ PART
 	{
 		name = FXModuleAnimateThrottle
 		animationName = KK_SpXCD_superdraco
+		responseSpeed = 0.001
+		layer = 1
 		dependOnEngineState = True
-		responseSpeed = 0.01
 		dependOnThrottle = True
+		weightOnOperational = True
 	}
 
     MODULE
@@ -303,7 +309,7 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = True
+		stagingEnabled = False
 		thrusterTransformName = draco
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
@@ -327,15 +333,14 @@ PART
 		atmosphereCurve
 		{
 			key = 0 300
-			key = 1 100
-			key = 4 0.001
+			key = 1 82.08
 		}
 	}
 
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = True
+		stagingEnabled = False
 		thrusterTransformName = draco_top
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
@@ -359,8 +364,7 @@ PART
 		atmosphereCurve
 		{
 			key = 0 300
-			key = 1 100
-			key = 4 0.001
+			key = 1 82.08
 		}
 	}
 
@@ -422,7 +426,7 @@ PART
 //  Configure TestFlight
 //  ================================================================================
 
-@PART[ROC-Dragon2CMLunar]:HAS[@MODULE[ModuleEngineConfigs],!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
+@PART[ROC-Dragon2CMLunar]:HAS[!MODULE[TestFlightInterop]]:BEFORE[zTestFlight]
 {
 	TESTFLIGHT
 	{
@@ -517,24 +521,25 @@ PART
 	MODULE:NEEDS[TacLifeSupport]
 	{
 		name = TacGenericConverter
-		converterName = CO2 Scrubber
+		converterName = CO2 Vacuum Scrubber
+		tag = Life Support
 		StartActionName = Start CO2 Scrubber
 		StopActionName = Stop CO2 Scrubber
-		tag = Life Support
+		conversionRate = 6.0
 		GeneratesHeat = False
 		UseSpecialistBonus = False
-		conversionRate = 7.0
 
 		INPUT_RESOURCE
 		{
 			ResourceName = CarbonDioxide
 			Ratio = 0.006216
+			FlowMode = STAGE_PRIORITY_FLOW
 		}
 
 		INPUT_RESOURCE
 		{
 			ResourceName = ElectricCharge
-			Ratio = 0.01
+			Ratio = 0.1
 		}
 	}
 }
