--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Chute1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Chute1.cfg
@@ -21,6 +21,8 @@
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2	
 
 	CoMOffset = 0.0, 0.0, 1.557307
+	CoLOffset = 0.0, 0.0, 1.557307
+	CoPOffset = 0.0, 0.0, 1.557307
 
 	attachRules = 1,0,1,0,0
 
@@ -46,18 +48,13 @@
 	//  ============================================================================
 
 	mass = 0.5
-	dragModelType = default
-	angularDrag = 0.1
-	crashTolerance = 10
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
+	crashTolerance = 12
+	emissiveConstant = 0.7
 	breakingForce = 100
 	breakingTorque = 50
 	bodyLiftMultiplier = 0
 	stagingIcon = PARACHUTES
-	fuelCrossFeed = False
-	stageOffset = 1
-	childStageOffset = 1
+	stageOffset = -1
 	buoyancyUseCubeNamed = PACKED
 
 	//  ============================================================================
@@ -104,12 +101,11 @@
 	MODULE
 	{
 		name = RealChuteModule
-		caseMass = 0.5
+		caseMass = 0.28
+		timer = 0
 		mustGoDown = True
 		spareChutes = 0
-		cutSpeed = 0.5
-		invertCanopy = false
-		reverseOrientation = false
+		cutSpeed = 0.25
 
 		PARACHUTE
 		{
@@ -120,13 +116,13 @@
 			material = Nylon
 			minIsPressure = False
 			minPressure = 0.01
-			preDeployedDiameter = 5
-			preDeploymentSpeed = 2.5
-			minDeployment = 3500
-			deployedDiameter = 50
-			deploymentSpeed = 5.0
-			deploymentAlt = 1500
-			cutAlt = -1
+			preDeployedDiameter = 38
+			preDeploymentSpeed = 0.5
+			minDeployment = 1200
+			deployedDiameter = 75
+			deploymentSpeed = 0.12
+			deploymentAlt = 600
+			cutAlt = 0
 		}
 	}
 
@@ -147,19 +143,13 @@
 
 @PART[ROC-Dragon2Chute1]:AFTER[zzzRealismOverhaul]
 {
-	@maxTemp = 673.15
-	@skinMaxTemp = 773.15
-}
-
-@PART[ROC-Dragon2Chute1]:AFTER[zzzRealismOverhaul]
-{
 	// RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
 	@MODULE[RealChuteModule]
 	{
 		@PARACHUTE
 		{
-			@minDeployment = 3500
-			@deploymentAlt = 1500
+            @minDeployment = 1000
+            @deploymentAlt = 600
 		}
 	}
 }
