--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Chute2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Chute2.cfg
@@ -21,6 +21,8 @@
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
 
 	CoMOffset = 0.0, -1.4, 1.0
+	CoLOffset = 0.0, -1.4, 1.0
+	CoPOffset = 0.0, -1.4, 1.0
 
 	attachRules = 1,0,1,0,0
 
@@ -46,18 +48,13 @@
 	//  ============================================================================
 
 	mass = 0.1
-	dragModelType = default
-	angularDrag = 0.1
-	crashTolerance = 10
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
-	breakingForce = 100
-	breakingTorque = 50
+	crashTolerance = 12
+	emissiveConstant = 0.7
+	breakingForce = 250
+	breakingTorque = 250
 	bodyLiftMultiplier = 0
 	stagingIcon = PARACHUTES
-	fuelCrossFeed = False
-	stageOffset = 1
-	childStageOffset = 1
+	stageOffset = -1
 	buoyancyUseCubeNamed = PACKED
 
 	//  ============================================================================
@@ -104,29 +101,28 @@
 	MODULE
 	{
 		name = RealChuteModule
-		caseMass = 0.1
+		caseMass = 0.09
+		timer = 0
 		mustGoDown = True
 		spareChutes = 0
-		cutSpeed = 0.5
-		invertCanopy = false
-		reverseOrientation = false
+		cutSpeed = 0.25
 
 		PARACHUTE
 		{
 			parachuteName = drogueChute_pivot
-			capName = drogueChute_base
+			capName = drogueChute_mainPullers
 			preDeploymentAnimation = KK_SpXCD_drogues_semi
 			deploymentAnimation = KK_SpXCD_drogues_fully
 			material = Nylon
 			minIsPressure = False
 			minPressure = 0.01
-			preDeployedDiameter = 5
-			preDeploymentSpeed = 1.5
-			minDeployment = 8000
-			deployedDiameter = 10.0
-			deploymentSpeed = 10.0
-			deploymentAlt = 8000
-			cutAlt = 3500
+			preDeployedDiameter = 17
+			preDeploymentSpeed = 0.5
+			minDeployment = 2600
+			deployedDiameter = 38
+			deploymentSpeed = 0.16667
+			deploymentAlt = 2200
+			cutAlt = 1000
 		}
 	}
 
@@ -147,19 +143,13 @@
 
 @PART[ROC-Dragon2Chute2]:AFTER[zzzRealismOverhaul]
 {
-	@maxTemp = 673.15
-	@skinMaxTemp = 773.15
-}
-
-@PART[ROC-Dragon2Chute2]:AFTER[zzzRealismOverhaul]
-{
 	// RO forces all RealChuteModules to minDeploy 5000, deploy 1000,
 	@MODULE[RealChuteModule]
 	{
 		@PARACHUTE
 		{
-			@minDeployment = 8000
-			@deploymentAlt = 8000
+            @minDeployment = 2600
+            @deploymentAlt = 2200
 		}
 	}
 }
