--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Cover1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2Cover1.cfg
@@ -47,20 +47,16 @@ PART
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.05
-	dragModelType = default
+	mass = 0.075
 	breakingForce = 250
 	breakingTorque = 250
-	maximum_drag = 0.20
-	minimum_drag = 0.15
-	angularDrag = 2
 	crashTolerance = 12
 	maxTemp = 973.15
 	skinMaxTemp = 2673.15
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
-	fuelCrossFeed = False
+	fuelCrossFeed = True
 	PhysicsSignificance = 0
 	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
