--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2DP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2DP.cfg
@@ -18,8 +18,8 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 0.090922, 0.0, 0.0, 1.0, 0, 1
-	node_stack_bottom = 0.0, -0.0, 0.0, 0.0, -1.0, 0, 1
+	node_stack_top = 0.0, 0.128517, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_bottom = 0.0, -0.169303, 0.0, 0.0, -1.0, 0.0, 1
 
 	attachRules = 1,0,1,0,0
 
@@ -42,7 +42,7 @@ PART
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.1
+	mass = 0.075
 	dragModelType = default
 	maximum_drag = 0.25
 	minimum_drag = 0.25
@@ -50,6 +50,7 @@ PART
 	breakingForce = 250
 	breakingTorque = 250
 	crashTolerance = 12
+	stagingIcon = DECOUPLER_VERT
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
 	emissiveConstant = 0.6
@@ -78,5 +79,14 @@ PART
 		minDistanceToReEngage = 0.25
 		undockEjectionForce = 0.1
 		stagingEnabled = False
+	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
+		animationName = KK_SpX_dockingport
+		actionGUIName = Toggle Docking Port
+		startEventGUIName = Extend Docking Port
+		endEventGUIName = Retract Docking Port
 	}
 }
