--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2HS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2HS.cfg
@@ -54,13 +54,13 @@
 	manufacturer = SpaceX
 	description = Highly durable heatshield, developed with reuse in mind and able to withstand high-energy reentries.
 	tags = Spacex, Dragon, PicaX, Crew
-	bulkheadProfiles = size2
+	bulkheadProfiles = size3
 
 	//  ============================================================================
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.2
+	mass = 1.0
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -69,10 +69,10 @@
 	breakingTorque = 200
 	crashTolerance = 12
 	fuelCrossFeed = False
+	PhysicsSignificance = 0
 	stageOffset = 1
 	childStageOffset = 1
 
-	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter  = 4
 	heatShieldTag = Lunar
 	resetHeatShieldAblator = true
