--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCM.cfg
@@ -23,6 +23,7 @@ PART
 	node_stack_bottom = 0.0, -0.709287, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_Chute = 0.0, 0.986667, -0.666667, 0.0, -1.0, 0.0, 2
 
+	CenterOfBuoyancy = 0.0, 1.5, 0.0
 	buoyancyUseSine = False
 	buoyancy = 1.1
 
@@ -51,7 +52,7 @@ PART
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 3.9
+	mass = 4.0
 	dragModelType = default
 	breakingForce = 250
 	breakingTorque = 250
@@ -64,7 +65,8 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
-	fuelCrossFeed = True
+	bodyLiftOnlyUnattachedLift = True
+	bodyLiftOnlyAttachName = bottom
 
 	//  ============================================================================
 	//  Animations and Textures
@@ -111,7 +113,13 @@ PART
 		minimumCrew = 0
 		hasHibernation = True
 		hibernationMultiplier = 0.625
-
+		defaultControlPointDisplayName = Default
+		CONTROLPOINT
+		{
+			name = reverse
+			displayName = Reversed
+			orientation = 0,0,180
+		}
 		RESOURCE
 		{
 			name = ElectricCharge
@@ -128,7 +136,7 @@ PART
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, 0.2
+		DescentModeCoM = 0, 0, -0.19
 	}
 
 	MODULE
@@ -159,12 +167,11 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = True
+		stagingEnabled = False
 		thrusterTransformName = rcsThrust
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
-		rcsEnabled = True
 		PROPELLANT
 		{
 			name = MMH
@@ -178,8 +185,7 @@ PART
 		atmosphereCurve
 		{
 			key = 0 300
-			key = 1 100
-			key = 4 0.001
+			key = 1 82.08
 		}
 	}
 
