--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCap.cfg
@@ -49,18 +49,18 @@ PART
 
 	mass = 0.1
 	dragModelType = default
-	maximum_drag = 0.1
-	minimum_drag = 0.1
-	angularDrag = 0.5
-	crashTolerance = 14
-	breakingForce = 100
-	breakingTorque = 100
+	breakingForce = 250
+	breakingTorque = 250
+	maximum_drag = 0.20
+	minimum_drag = 0.15
+	angularDrag = 2
+	crashTolerance = 12
 	maxTemp = 973.15
-	skinMaxTemp = 1073.15
+	skinMaxTemp = 2673.15
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
-	fuelCrossFeed = False
+	fuelCrossFeed = True
 	PhysicsSignificance = 0
 	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
