--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSC.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonSC.cfg
@@ -45,7 +45,7 @@ PART
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.025
+	mass = 0.1
 	dragModelType = default
 	breakingForce = 250
 	breakingTorque = 250
@@ -55,7 +55,7 @@ PART
 	crashTolerance = 12
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	fuelCrossFeed = False
+	fuelCrossFeed = True
 	PhysicsSignificance = 0
 	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
