--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
@@ -49,14 +49,14 @@ PART
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 2.9
+	mass = 4.5
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
 	angularDrag = 2
 	crashTolerance = 10
-	breakingForce = 250
-	breakingTorque = 250
+	breakingForce = 200
+	breakingTorque = 200
 	maxTemp = 973.15
 	skinMaxTemp = 1073.15
 	fuelCrossFeed = True
@@ -110,14 +110,13 @@ PART
 		minimumCrew = 0
 		hasHibernation = True
 		hibernationMultiplier = 0.625
-		defaultControlPointDisplayName = Prograde
+		defaultControlPointDisplayName = Default
 		CONTROLPOINT
 		{
 			name = reverse
-			displayName = Retrograde
+			displayName = Reversed
 			orientation = 0,0,180
 		}
-
 		RESOURCE
 		{
 			name = ElectricCharge
@@ -143,7 +142,7 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = True
+		stagingEnabled = False
 		thrusterTransformName = rcsThrust
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
@@ -161,8 +160,7 @@ PART
 		atmosphereCurve
 		{
 			key = 0 300
-			key = 1 100
-			key = 4 0.001
+			key = 1 82.08
 		}
 	}
 
