--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXLDP.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXLDP.cfg
@@ -43,17 +43,20 @@ PART
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.1
+	mass = 0.15
 	dragModelType = default
+	maximum_drag = 0.25
+	minimum_drag = 0.25
+	angularDrag = 0.5
 	breakingForce = 250
 	breakingTorque = 250
-	maximum_drag = 0.20
-	minimum_drag = 0.15
-	angularDrag = 2
-	crashTolerance = 10
+	crashTolerance = 12
+	stagingIcon = DECOUPLER_VERT
 	maxTemp = 673.15
 	skinMaxTemp = 773.15
-	fuelCrossFeed = True
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 
 	//  ============================================================================
 	//  Modules and Resources
