--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CargoCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CargoCM.cfg
@@ -18,7 +18,7 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	node_stack_top = 0.0, 1.87176, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0, 1.880697, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -1.600847, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_mainChutes = 0.0, 1.481525, -1.557307, 0.0, 1.0, 0.0, 2
 	node_stack_drogueCover = 0.0, 1.2, -1.0, 0.0, 1.0, 0.0, 2
@@ -70,7 +70,8 @@ PART
 	emissiveConstant = 0.6
 	thermalMassModifier = 1.0
 	skinMassPerArea = 4
-	fuelCrossFeed = True
+	bodyLiftOnlyUnattachedLift = True
+	bodyLiftOnlyAttachName = bottom
 
 	//  ============================================================================
 	//  Animations and Textures
@@ -144,7 +145,13 @@ PART
 		minimumCrew = 0
 		hasHibernation = True
 		hibernationMultiplier = 0.625
-
+		defaultControlPointDisplayName = Default
+		CONTROLPOINT
+		{
+			name = reverse
+			displayName = = Reversed
+			orientation = 0,0,180
+		}
 		RESOURCE
 		{
 			name = ElectricCharge
@@ -201,6 +208,13 @@ PART
 
 	MODULE
 	{
+		name = ModuleConductionMultiplier
+		modifiedConductionFactor = 0.003
+		convectionFluxThreshold = 3000
+	}
+
+	MODULE
+	{
 		name = ModuleRCSFX
 		stagingEnabled = True
 		thrusterTransformName = draco
@@ -226,8 +240,7 @@ PART
 		atmosphereCurve
 		{
 			key = 0 300
-			key = 1 100
-			key = 4 0.001
+			key = 1 82.08
 		}
 	}
 
@@ -258,8 +271,7 @@ PART
 		atmosphereCurve
 		{
 			key = 0 300
-			key = 1 100
-			key = 4 0.001
+			key = 1 82.08
 		}
 	}
 
