--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonHS.cfg
@@ -22,8 +22,9 @@ PART
 	node_stack_top = 0.0, 0.001742, 0.0, 0.0, 1.0, 0.0, 3
 	node_stack_bottom = 0.0, -0.070134, 0.0, 0.0, -1.0, 0.0, 3
 
-	CoPOffset = 0.0, 1.0, 0.0
-	CoLOffset = 0.0, -0.15, 0.0
+	CoPOffset = 0.0, 4.0, 0.0
+	CoLOffset = 0.0, -0.5, 0.0
+	CenterOfDisplacement = 0.0, 2.0, 0.0
 	buoyancy = 0.0
 
 	attachRules = 1,0,1,0,1
@@ -41,13 +42,13 @@ PART
 	manufacturer = SpaceX
 	description = Highly durable heatshield, developed with reuse in mind and able to withstand high-energy reentries.
 	tags = Spacex, Dragon, PicaX, CRS
-	bulkheadProfiles = size2
+	bulkheadProfiles = size3
 
 	//  ============================================================================
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.2
+	mass = 0.8
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
@@ -56,10 +57,10 @@ PART
 	breakingTorque = 200
 	crashTolerance = 12
 	fuelCrossFeed = False
+	PhysicsSignificance = 0
 	stageOffset = 1
 	childStageOffset = 1
 
-	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter  = 3.7
 	heatShieldTag = Lunar
 	resetHeatShieldAblator = true
