Fixed Min Deployment Value of Vostok Parachute.
Should Fix https://github.com/KSP-RO/ROCapsules/issues/64

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokParachute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokParachute.cfg
@@ -125,10 +125,11 @@ PART
 			preDeploymentAnimation = semi
 			deploymentAnimation = full
 			material = Nylon
-			minIsPressure = true
+			minIsPressure = false
 			minPressure = 0.01
 			preDeployedDiameter = 2
 			preDeploymentSpeed = 2
+			minDeployment = 2500
 			deployedDiameter = 21
 			deploymentSpeed = 6
 			deploymentAlt = 2000
@@ -164,6 +165,7 @@ PART
 	{
 		@PARACHUTE
 		{
+			@minDeployment = 2500
 			@deploymentAlt = 2000
 		}
 	}
