--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
@@ -218,14 +218,19 @@ PART
 
 	MODULE
 	{
-		name = ModuleB9DisableTransform
-		transform = Cylinder_079
+		name = ModuleJettison
+		jettisonName = Cylinder_079
+		bottomNodeName = top
+		isFairing = False
+		jettisonedObjectMass = 0.001
+		jettisonForce = 3
+		jettisonDirection = 3 0 0
 	}
 
 	MODULE:NEEDS[RasterPropMonitor]
 	{
 		name = RasterPropMonitorComputer
-		storedStrings = v 0.2.0.0|06.11.2016|    Soyuz    |SOYUZ-TMA|(MODIFIED)|SQD0A4012-A1|MK1|      DECQ  &   Dragon
+		storedStrings = v 0.2.0.0|06.11.2016| Soyuz |SOYUZ-TMA|(MODIFIED)|SQD0A4012-A1|MK1| DECQ & Dragon
 	}
 
 	MODULE
