Add Back ModuleJettison

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
@@ -209,10 +209,15 @@ PART
 		}
 	}
 
-	MODULE
+  	MODULE
 	{
-		name = ModuleB9DisableTransform
-		transform = Fairing1
+		name = ModuleJettison
+		jettisonName = Fairing1
+		bottomNodeName = bottom
+		isFairing = True
+		jettisonedObjectMass = 0.1
+		jettisonForce = 5
+		jettisonDirection = 0 0 1
 	}
 
 	MODULE
