Rollback Add ModuleJettison

--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
@@ -216,15 +216,10 @@ PART
 		}
 	}
 
-	MODULE
+  	MODULE
 	{
-		name = ModuleJettison
-		jettisonName = Cylinder_079
-		bottomNodeName = top
-		isFairing = False
-		jettisonedObjectMass = 0.001
-		jettisonForce = 3
-		jettisonDirection = 3 0 0
+		name = ModuleB9DisableTransform
+		transform = Cylinder_079
 	}
 
 	MODULE:NEEDS[RasterPropMonitor]
