Rollback Add ModuleJettison

--- a/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
+++ b/GameData/ROCapsules/PartConfigs/Vostok/VostokService.cfg
@@ -211,13 +211,8 @@ PART
 
   	MODULE
 	{
-		name = ModuleJettison
-		jettisonName = Fairing1
-		bottomNodeName = bottom
-		isFairing = True
-		jettisonedObjectMass = 0.1
-		jettisonForce = 5
-		jettisonDirection = 0 0 1
+		name = ModuleB9DisableTransform
+		transform = Fairing1
 	}
 
 	MODULE
