--- a/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
+++ b/GameData/ROCapsules/PartConfigs/Soyuz MS/SoyuzMSCapsule.cfg
@@ -218,8 +218,13 @@ PART
 
   	MODULE
 	{
-		name = ModuleB9DisableTransform
-		transform = Cylinder_079
+		name = ModuleJettison
+		jettisonName = Cylinder_079
+		bottomNodeName = top
+		isFairing = False
+		jettisonedObjectMass = 0.001
+		jettisonForce = 3
+		jettisonDirection = 3 0 0
 	}
 
 	MODULE:NEEDS[RasterPropMonitor]
