Should Hopefully Fix
https://github.com/KSP-RO/ROCapsules/issues/60 (Big Gemini various small issues)

https://github.com/KSP-RO/ROCapsules/issues/53 (ROC-LEMAscent drag cube generation exception)

https://github.com/KSP-RO/ROCapsules/issues/49 (1.2.0 Staged decoupler issues in Mercury/Gemini) Gemini Issues Hopefully Fixed, still need to look at Mercury issues.

--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiCabin.cfg
@@ -26,20 +26,20 @@ PART
 	TechRequired = commandModules
 	entryCost = 12000
 	cost = 4000
-	category     = Pods
-	subcategory  = 0
-	title        = Big G Crew Module
+	category = Pods
+	subcategory = 0
+	title = Big G Crew Module
 	manufacturer = McDonnell Douglas
-	description  = As operations in space become more complex, more crew members are needed. This expanded crew module replaces the standard Gemini service module, allowing seven additional crew members to ride to space. To be used with either a modified Apollo Service Module for deep space operations, or the Big Gemini Service Module for LEO operations.
+	description = As operations in space become more complex, more crew members are needed. This expanded crew module replaces the standard Gemini service module, allowing seven additional crew members to ride to space. To be used with either a modified Apollo Service Module for deep space operations, or the Big Gemini Service Module for LEO operations.
 	mass = 3.36
-	dragModelType  = default
-	maximum_drag   = 0.20
-	minimum_drag   = 0.15
-	angularDrag    = 2
+	dragModelType = default
+	maximum_drag = 0.20
+	minimum_drag = 0.15
+	angularDrag = 2
 	crashTolerance = 20
-	maxTemp             = 900
-	skinMaxTemp         = 3350
-	heatConductivity    = 0.1
+	maxTemp = 900
+	skinMaxTemp = 3350
+	heatConductivity = 0.1
 	thermalMassModifier = 1.0
 	vesselType = Ship
 	CrewCapacity = 7
@@ -50,6 +50,25 @@ PART
 	INTERNAL
 	{
 		name = bdb_TRAILS_Gemini_B_Interior
+	}
+
+	MODULE //The Gemini B's fully integrated flight cockpit, environmental control system, and electronic system installations would be retained.
+	{
+		name = ModuleCommand
+		minimumCrew = 1
+		hasHibernation = True
+		hibernationMultiplier = 0.25
+		RESOURCE
+		{
+			name = ElectricCharge
+			rate = 2.09
+		}
+	}
+
+	MODULE
+	{
+		name = AdjustableCoMShifter
+		DescentModeCoM = 0.0, 0.0, -0.1
 	}
 
 	MODULE
