--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiEquipmentSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiEquipmentSection.cfg
@@ -84,7 +84,7 @@ PART
 	{
 		rcsAtt
 		{
-			AUDIO_MULTI
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
 				transformName = rcsTransform
@@ -102,7 +102,7 @@ PART
 				modelName = Squad/FX/Monoprop_small
 				transformName = rcsTransform
 				emission = 0.0 0.0
-				emission = 0.1 0.3
+				emission = 0.1 0.0
 				emission = 1.0 1.0
 				speed = 0.0 0.8
 				speed = 1.0 1.0
@@ -128,7 +128,6 @@ PART
 		stagingEnabled = False
 		thrusterTransformName = rcsTransform
 		thrusterPower = 0.11 // 25 lb
-		resourceName = MonoPropellant
 		resourceFlowMode = STACK_PRIORITY_SEARCH
 		runningEffectName = rcsAtt
 		rcsEnabled = True
@@ -138,10 +137,6 @@ PART
 		enableRoll = true
 		enablePitch = true
 		enableYaw = true
-
-		PlumeName = soyuz_0p4
-		PlumeScale = 1,1,1
-
 		PROPELLANT
 		{
 			name = MMH
