--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryRCS.cfg
@@ -63,14 +63,14 @@ PART
 	{
 		rcs
 		{
-			AUDIO_MULTI
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
 				transformName = rcsTransform
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -186,25 +186,17 @@ PART
 		thrusterPower = 0.1067573
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = rcs
-
-		PlumeName = soyuz_0p4
-		PlumeScale = 1,1,1
-
-		enablePitch = true
-		enableYaw = true
-		enableRoll = false
-
 		enableX = false
 		enableY = false
 		enableZ = false
-
-
+		enableRoll = true
+		enablePitch = true
+		enableYaw = true
 		PROPELLANT
 		{
 			name = HTP
 			ratio = 1.0
 		}
-
 		atmosphereCurve
 		{
 			key = 0 137
