--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDecoupler.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/BigG/BigGeminiDecoupler.cfg
@@ -40,6 +40,7 @@ PART
 	breakingTorque = 200
 	maxTemp = 2000 // = 3400
 	fuelCrossFeed = False
+	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
 	childStageOffset = 1
 	bulkheadProfiles = size2
@@ -49,9 +50,9 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 25
+		ejectionForce = 50
 		explosiveNodeID = top
-		stagingEnabled = False
+		stagingEnabled = True
 	}
 
 	MODULE
@@ -71,16 +72,5 @@ PART
 		endEventGUIName = Extend Umbilicals
 		actionGUIName = Toggle Umbilicals
 		allowAnimationWhileShielded = True
-	}
-
-	MODULE
-	{
-		name = ModuleJettison
-		jettisonName = Umbilical
-		bottomNodeName = top
-		isFairing = False
-		jettisonedObjectMass = 0.01
-		jettisonForce = 0
-		jettisonDirection = 0 0 1
 	}
 }
