--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiReentryControlSystem.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiReentryControlSystem.cfg
@@ -46,14 +46,14 @@ PART
 	{
 		rcsAtt
 		{
-			AUDIO_MULTI
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
 				transformName = rcsTransform
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -88,12 +88,6 @@ PART
 		enableRoll = true
 		enablePitch = true
 		enableYaw = true
-		
-		atmosphereCurve
-		{
-			key = 0 283
-			key = 1 100
-		}
 		PROPELLANT
 		{
 			name = MMH
@@ -103,6 +97,11 @@ PART
 		{
 			name = NTO
 			ratio = 0.446
+		}
+		atmosphereCurve
+		{
+			key = 0 283
+			key = 1 100
 		}
 	}
 
