--- a/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeSection.cfg
+++ b/GameData/ROCapsules/PartConfigs/GeminiBDB/GeminiRetrogradeSection.cfg
@@ -76,14 +76,14 @@ PART
 	{
 		rcsTranslate
 		{
-			AUDIO_MULTI
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
 				transformName = rcsTransform
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -103,14 +103,14 @@ PART
 		}
 		rcsRetro
 		{
-			AUDIO_MULTI
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
 				transformName = retroTransform
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
@@ -145,10 +145,6 @@ PART
 		enableRoll = false
 		enablePitch = false
 		enableYaw = false
-
-		PlumeName = soyuz_0p4
-		PlumeScale = 1,1,1
-
 		PROPELLANT
 		{
 			name = MMH
@@ -181,10 +177,6 @@ PART
 		enableRoll = false
 		enablePitch = false
 		enableYaw = false
-
-		PlumeName = soyuz_0p4Retro
-		PlumeScale = 1,1,1
-
 		PROPELLANT
 		{
 			name = MMH
