Fix Up LEM Internal Model Hopefully Fixes https://github.com/KSP-RO/ROCapsules/issues/62

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -14,8 +14,6 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/LEM/LEM_Ascent
-		scale = 1.0, 1.0, 1.0
-		rotation = 0, 180, 0
 	}
 
     MODEL // Model for the Docking Port to Integrate it
@@ -23,7 +21,6 @@ PART
         model = ROCapsules/Assets/DECQ/LEM/LEM_dockingPort
         scale = 1.175, 1.0, 1.175
         position = 0.0, 1.325, 0.0
-        rotation = 0.0, 0.0, 0.0
     }
 	
 	scale = 1.0
@@ -566,6 +563,23 @@ PART
 				loop = false
 			}
 		}	
+	}
+}
+
+//  ================================================================================
+//	Correct internal model
+//  ================================================================================
+
+@PART[ROC-LEMAscent]:AFTER[RealismOverhaul]
+{
+	@INTERNAL[Lem_cockpit]
+	{
+		@MODULE[InternalSeat],*
+		{
+			%allowCrewHelmet = True
+			%kerbalOffset = 0.0, -0.075, 0.0
+			%kerbalEyeOffset = 0.0, -0.075, 0.0
+		}
 	}
 }
 
