Fix The LEM Internal Model Getting Scaled up

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -71,7 +71,7 @@ PART
 	
 	INTERNAL
 	{
-		name = Lem_cockpit
+		name = ROC-LEMInternal
 	}
 	
 	//  ============================================================================
@@ -572,11 +572,11 @@ PART
 
 @PART[ROC-LEMAscent]:AFTER[RealismOverhaul]
 {
-	@INTERNAL[Lem_cockpit]
+	@INTERNAL[ROC-LEMInternal]
 	{
 		@MODULE[InternalSeat],*
 		{
-			%allowCrewHelmet = True
+			%allowCrewHelmet = False
 			%kerbalOffset = 0.0, -0.075, 0.0
 			%kerbalEyeOffset = 0.0, -0.075, 0.0
 		}
