Format Internal Config Better

--- a/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
+++ b/GameData/ROCapsules/PartConfigs/LEM/LEMAscent.cfg
@@ -566,21 +566,20 @@ PART
 	}
 }
 
-//  ================================================================================
-//	Correct internal model
-//  ================================================================================
+//  ==================================================
+//  Apollo Lunar Module ascent stage.
 
-@PART[ROC-LEMAscent]:AFTER[RealismOverhaul]
+//  Internal space configuration.
+//  ==================================================
+
+@INTERNAL[ROC-LEMInternal]:AFTER[RealismOverhaul]
 {
-	@INTERNAL[ROC-LEMInternal]
-	{
-		@MODULE[InternalSeat],*
-		{
-			%allowCrewHelmet = False
-			%kerbalOffset = 0.0, -0.075, 0.0
-			%kerbalEyeOffset = 0.0, -0.075, 0.0
-		}
-	}
+    @MODULE[InternalSeat],*
+    {
+        %allowCrewHelmet = False
+        %kerbalOffset = 0.0, 0.0, 0.0
+        %kerbalEyeOffset = 0.0, 0.0, 0.0
+    }
 }
 
 //  ================================================================================
