--- a/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo/ApolloRCS.cfg
@@ -109,14 +109,14 @@ PART
 	{
 		running
 		{
-			AUDIO
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
 				clip = sound_rocket_mini
 				transformName = RCSthruster
 				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
+				volume = 0.02 0.1
+				volume = 0.5 0.1
 				volume = 1.0 0.1
 				pitch = 0.0 0.75
 				pitch = 1.0 1.5
