--- a/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/MercuryBDB/MercuryCM.cfg
@@ -14,7 +14,7 @@ PART
 
 	rescaleFactor = 1.512
 	scale = 1
-	node_stack_top	  = 0.0,  0.49839, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0,  0.49839, 0.0, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, -0.47261, 0.0, 0.0, -1.0, 0.0, 1
 	CenterOfBuoyancy = 0.0, 0.0, -0.05
 	//CenterOfDisplacement = 0.0, -0.3, 0.0
@@ -71,7 +71,7 @@ PART
 	{
 		rcs
 		{
-			AUDIO_MULTI
+			AUDIO_MULTI_POOL
 			{
 				channel = Ship
 				transformName = rcsTransform
