Change Some RCS Configs Add Starship Lunar

--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CM.cfg
@@ -314,6 +314,7 @@ PART
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
+		rcsEnabled = True
 		enableYaw = True
 		enablePitch = True
 		enableRoll = True
@@ -345,6 +346,7 @@ PART
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running2
+		rcsEnabled = True
 		enableYaw = False
 		enablePitch = False
 		enableRoll = False
