--- a/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
+++ b/GameData/ROCapsules/PartConfigs/DragonXL/Vader111/DragonXL.cfg
@@ -147,6 +147,7 @@ PART
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
+		rcsEnabled = True
 		PROPELLANT
 		{
 			name = MMH
