--- a/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CargoCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK/Dragon2CargoCM.cfg
@@ -216,11 +216,12 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = True
+		stagingEnabled = False
 		thrusterTransformName = draco
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
+		rcsEnabled = True
 		enableYaw = True
 		enablePitch = True
 		enableRoll = True
@@ -247,11 +248,12 @@ PART
 	MODULE
 	{
 		name = ModuleRCSFX
-		stagingEnabled = True
+		stagingEnabled = False
 		thrusterTransformName = draco_top
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running2
+		rcsEnabled = True
 		enableYaw = False
 		enablePitch = False
 		enableRoll = False
