--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries/DragonCM.cfg
@@ -172,6 +172,7 @@ PART
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
+		rcsEnabled = True
 		PROPELLANT
 		{
 			name = MMH
