Format into Tabs

--- a/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
+++ b/GameData/ROCapsules/PartConfigs/Apollo ETS/ApolloHGABlockIII.cfg
@@ -34,7 +34,7 @@ PART
 	subcategory = 0
 	title = Apollo Block III High Gain Antenna
 	manufacturer = Rockwell International
-	description = A collapsable relay antenna. Intended to be placed on the mounting bracket of the Apollo Service Engine Block III. FICTIONAL (Eyes Turned Skyward)=
+	description = A collapsable relay antenna. Intended to be placed on the mounting bracket of the Apollo Service Engine Block III. FICTIONAL (Eyes Turned Skyward)
 	tags = apollo, block-III, block-3, eyes turned skyward
 
 	bulkheadProfiles = srf
@@ -69,9 +69,9 @@ PART
 	}
 }
 
-//  ================================================================================
+//	================================================================================
 //	Configure RealAntennas
-//  ================================================================================
+//	================================================================================
 // A steerable unified S-band high-gain antenna for long-range communications with Earth was mounted on the aft bulkhead.
 // https://en.wikipedia.org/wiki/Apollo_command_and_service_module#Communications_system
 
